# connexa_openvpn_mcp_server

./: .env  LICENSE  __init__.py  __main__.py  api_tools.py  config_manager.py  device_tools.py  group_tools.py  mcp_client_test_create_network_connector.py  mcp_client_test_create_objects.py  mcp_client_test_delete_object.py  mcp_client_tester.py  mcp_openvpn.pem  mcp_ovpn_res.py  prompts.py  pyproject.toml  readme_update_tools.md  schema.json  server.py  server_tools.py  test_create_connector.py  test_create_user_with_selected_group.py  test_dynamic_connector.py  test_provision_connector.py  test_select_object.py  test_select_object_direct.py  testing_notes.md  user_tools.py
aws/: .gitignore  README.md  __init__.py  aws_boto3_apis.py  aws_tools.py  featherriverprinter_san_jose_(ca).ovpn  single_region_egress_details.json  test_create_multi_region_egress.py  test_create_single_region_egress.py  test_delete_multi_region_egress.py  test_delete_single_region_egress.py
connexa/: __init__.py  api.json  config_manager.py  connector_tools.py  connexa_api.py  creation_tools.py  delete_tool.py  dns_log_tools.py  dynamic_connector.py  dynamic_network.py  dynamic_tool_manager.py  mcp_ovpn_res.py  selected_object.py  swagger.json  test_swagger.py  update_tools.py
connexa/future_tools/: device_posture_tools.py  dynamic_network.py  selected_object.py
recycle/: __init__.py  __main__.py  openvpn_resources.py  region_tools.py  resource.py  test_real_api_simple.py  test_select_object_real_api.py
